# ptre

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WORKSPACE  gen_protos.sh
examples/: hosts  run-ptre  tensorflow2_keras_mnist.py
ptre/: BUILD  CMakeLists.txt  README.md  ptre.h  ptre_global.cc  ptre_global.h
ptre/cm/: CMakeLists.txt  consensus_manager.cc  consensus_manager.h  incoming_scheduler.cc  incoming_scheduler.h  model.cc  model.h  model_buffer.h  peer_selector.cc  peer_selector.h  pemit_scheduler.cc  permit_scheduler.h  ptre_env.h  push_permit.cc  push_permit.h  push_permit_manager.cc  push_permit_manager.h  remote_store.cc  remote_store.h  remote_variable.cc  remote_variable.h  tensor_aggregator.cc  tensor_aggregator.h  test_peer_selector.cc
ptre/common/: CMakeLists.txt  buffer_table.cc  buffer_table.h  common.cc  common.h  logging.h  message.cc  message.h  operations.bak.cc  operations.bak.h  operations.cc  operations.h  operations_test.cc  operations_test.py  ptre_global.cc  ptre_global.h
ptre/common/cm/: CMakeLists.txt  consensus_manager.cc  consensus_manager.h  incoming_scheduler.cc  incoming_scheduler.h  model.cc  model.h  peer_selector.cc  peer_selector.h  push_permit.cc  push_permit.h  ready_tensor.cc  ready_tensor.h  remote_store.cc  remote_store.h  remote_variable.cc  remote_variable.h  tensor_aggregator.cc  tensor_aggregator.h  test_peer_selector.cc
ptre/common/communication/: CMakeLists.txt  comm_types.h  communicator.h  pull_variable.cc  pull_variable.h  push_variable.cc  push_variable.h
ptre/common/communication/grpc/: CMakeLists.txt  grpc_client_cache.cc  grpc_client_cache.h  test_grpc_client_cache.cc
ptre/common/communication/rdma/: CMakeLists.txt  grpc_client.cc  grpc_client.h  grpc_server.cc  grpc_server.h  grpc_server_test.cc  pull_job.cc  pull_job.h  rdma.cc  rdma.h  rdma_agg_writer.cc  rdma_agg_writer.h  rdma_channel.cc  rdma_channel.h  rdma_mgr.cc  rdma_mgr.h  rdma_task.cc  rdma_task.h  rdma_worker.cc  rdma_worker.h  rdma_writer.h
ptre/common/communication/tcp/: CMakeLists.txt  tcp_grpc_client.cc  tcp_grpc_client.h  tcp_service_impl.cc  tcp_service_impl.h  tcp_service_test.cc
ptre/common/ops/: operation_manager.cc  operation_manager.h  rdma_operations.cc
ptre/common/rdma/: CMakeLists.txt  rdma_context.cc  rdma_context.h  rdma_controller.cc  rdma_controller.h  rdma_mpi.cc  rdma_mpi.h  rdma_mpi_v2.cc  rdma_mpi_v2.h  rdma_request.cc  rdma_request.h  rdmacm_client.h  rdmacm_server.cc  rdmacm_server.h
ptre/common/utils/: CMakeLists.txt  host_file_parser.cc  host_file_parser.h
ptre/communication/: CMakeLists.txt  comm_types.h  communicator.h  pull_variable.cc  pull_variable.h  push_variable.cc  push_variable.h
ptre/communication/grpc/: CMakeLists.txt  grpc_client_cache.cc  grpc_client_cache.h  test_grpc_client_cache.cc
ptre/communication/rdma/: CMakeLists.txt  grpc_client.cc  grpc_client.h  grpc_server.cc  grpc_server.h  grpc_server_test.cc  pull_job.cc  pull_job.h  rdma.cc  rdma.h  rdma_agg_writer.cc  rdma_agg_writer.h  rdma_channel.cc  rdma_channel.h  rdma_manager.cc  rdma_manager.h  rdma_mgr.cc  rdma_mgr.h  rdma_task.cc  rdma_task.h  rdma_worker.cc  rdma_worker.h  rdma_writer.cc  rdma_writer.h
ptre/communication/tcp/: CMakeLists.txt  tcp_grpc_client.cc  tcp_grpc_client.h  tcp_service_impl.cc  tcp_service_impl.h
ptre/core/: BUILD  CMakeLists.txt  allocator.cc  allocator.h  ptre_global.h  ptre_server.cc  ptre_server.h  tensor.cc  tensor.h  types.cc  types.h  types.pb.cc  types.pb.h  types.proto
ptre/kernels/: CMakeLists.txt  compile_ptre_ops_gpu.sh  job_def.cc  job_def.h  ptre_op_helpers.cc  ptre_op_helpers.h  ptre_ops.cc  ptre_ops.h  ptre_ops_gpu.cu.cc  test_gpu_ops.cc  test_test_ops.py
ptre/lib/: CMakeLists.txt  cache_ctl.h  concurrent_queue.h  concurrent_queue_test.cc  distributions.h  shared_mutex.cc  shared_mutex.h  types.h
ptre/ops/: ptre_ops.cc
ptre/protobuf/: CMakeLists.txt  messages.pb.cc  messages.pb.h  messages.proto  ptre_service.proto  rdma_service.grpc.pb.cc  rdma_service.grpc.pb.h  rdma_service.pb.cc  rdma_service.pb.h  rdma_service.proto  tcp_service.grpc.pb.cc  tcp_service.grpc.pb.h  tcp_service.pb.cc  tcp_service.pb.h  tcp_service.proto
ptre/python/ptre/run/: runner.py
ptre/python/ptre/run/utils/: shell_exec.py
ptre/python/ptre/tensorflow/: __init__.py  ptre_ops.py  util.py
ptre/python/ptre/tensorflow/keras/: __init__.py  callbacks.py
ptre/python/ptre/tensorflow/keras/optimizers/: allreduce_optimizer.py  pull_optimizer.py
ptre/python/tensorflow/: __init__.py  ptre_ops.py  util.py
ptre/python/tensorflow/keras/: __init__.py  callbacks.py
ptre/rpc/: grpc_ptre_server.cc  ptre_service.cc  ptre_service.h  ptre_service_impl.cc  ptre_service_impl.h
ptre/tensorflow/: types.h
ptre/tensorflow/kernels/: CMakeLists.txt  build_test_ops.sh  compile_ptre_ops_gpu.sh  job_def.cc  job_def.h  ptre_op_helpers.cc  ptre_op_helpers.h  ptre_ops.cc  ptre_ops.h  ptre_ops_gpu.cu.cc  test_gpu_ops.cc  test_ops.cc  tf_ops_test.cc
ptre/tests/: CMakeLists.txt  agg_test.cc  allreduce_seg_test.cc  allreduce_test.cc  allreduce_v2_test.cc  cas_test.cc  send_recv_test.cc  send_test.cc  sendrecv_test.cc  state_test.cc  test_server_lib.cc  test_server_lib.h  write_with_imm_test.cc
ptre/tests/python/: allreduce_test.py
test/: hostfile.example  ptre_test_common.py  ptre_worker.py
test/utils/: CMakeLists.txt  host_file_parser_test.cc
